--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ img.recipe-photo {
     font-family: var(--young-serif);
     font-weight: var(--fw-700);
     color: var(--Stone-600);
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-bottom: 24px;
 }
 
@@ -152,4 +152,11 @@ hr{
     font-family: var(--outfit);
     color: var(--Brown-800);
     font-weight: var(--fw-700);
+}
+
+
+.preparation-info ul li:not(:last-child),
+.ingredients ul li:not(:last-child),
+.instructions ol li:not(:last-child) {
+    margin-bottom: 10px;
 }
