--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ img.recipe-photo {
     font-family: var(--young-serif);
     font-weight: var(--fw-700);
     color: var(--Stone-900);
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-bottom: 24px;
 }
 
@@ -117,6 +117,7 @@ img.recipe-photo {
     font-weight: var(--fw-400);
     color: var(--Stone-600);
     line-height: 1.5rem;
+    font-size: 15px;
 }
 
 .nutrition-table{
