--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body{
     background-color: var(--White);
     border-radius: 1.2rem;
     border-radius: 1.2rem;
-    padding: 2.5vw;
+    padding: 2.5vw 2.5vw 0 2.5vw;
 }
 
 .about-recipe {
